# everything

./: .bazelignore  .bazelrc  .bazelrc.remote-exec.example  .env.example  .gitignore  .mcp.json  AGENT.md  AGENTS.md  ARCHITECTURE.md  BAZEL_CACHE_EVALUATION.md  BAZEL_TARGETS.md  BCR_FIREWALL_ANALYSIS.md  BCR_URLS_COMPLETE_LIST.md  BEFORE_AFTER_COMPARISON.md  BUILD.bazel  BUILD_PERFORMANCE_ANALYSIS.md  DEMO_EXCLUSION_FEATURE.md  FIX_VERIFICATION.md  GHCR_FIX_VERIFICATION.md  GITHUB_ACTIONS_UI.md  HELM_REPO_IMPLEMENTATION.md  HELM_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MANMAN_STRUCTURE.md  MODULE.bazel  MULTIARCH_FIX_SUMMARY.md  OLD_ARCHITECTURE_AUDIT.md  OPENAPI_AUTOMAGIC_SUMMARY.md  OPENAPI_BAZEL_MIGRATION.md  OPENAPI_CLIENT_IMPLEMENTATION_SUMMARY.md  OPENAPI_FINAL_SUMMARY.md  OPTIMIZATION_RDEPS.md  PR_SUMMARY.md  README.md  RETRY_IMPLEMENTATION.md  RMQ_MIGRATION_SUMMARY.md  SCALA_IMPLEMENTATION.md  TDD_PROGRESS.md  TESTING_GUIDE.md  (+27 more)
apps/hello_python/: BUILD.bazel  main.py  test_main.py
clients/: BUILD.bazel  README.md  test_experience_api_client.py
demo/: .env.example  BUILD.bazel  Tiltfile
demo/blink/: BUILD.bazel  blink.cc  blink_logic_test.cc  flash.sh
demo/hello_fastapi/: BUILD.bazel  BUILD.experimental  Dockerfile.example  configmap.yaml  example_minimal.py  k8s-deployment-example.yaml  main.py  main_with_deployment.py  networkpolicy.yaml  test_main.py
demo/hello_go/: BUILD.bazel  main.go  main_test.go
demo/hello_go_client/: BUILD.bazel  main.go  main_test.go
demo/hello_go_logging/: BUILD.bazel  main.go  main_test.go
demo/hello_grpc_go/: README.md
demo/hello_internal_api/: BUILD.bazel  main.py  test_main.py
demo/hello_job/: BUILD.bazel  main.py  test_main.py
demo/hello_logging/: BUILD.bazel  __init__.py  main.py  test_main.py
demo/hello_observability/: BUILD.bazel  main.go  main_test.go
demo/hello_openapi_consumer/: BUILD.bazel  __init__.py  main.py  test_main.py
demo/hello_python/: BUILD.bazel  main.py  test_main.py
demo/hello_scala/: BUILD.bazel  Main.scala  MainTest.scala  README.md
demo/hello_steamcmd/: BUILD.bazel  main.py
demo/hello_worker/: BUILD.bazel  main.py  test_main.py
demo/hello_world_test/: BUILD.bazel  __init__.py  main.py  test_main.py
demo/network_send/: BUILD.bazel  network_send.cc  network_send_test.cc
demo/sensor_read/: BUILD.bazel  sensor_read.cc  sensor_read_test.cc
firmware/: BUILD.bazel  README.md  TOC.md  pins.h
firmware/adc/: BUILD.bazel  adc.h  arduino_adc.cc  arduino_adc.h  fake_adc.h
firmware/config/: BUILD.bazel  config_applier.cc  config_applier.h  config_applier_test.cc  config_store.cc  config_store.h
firmware/credentials/: BUILD.bazel  credentials.h  define_credentials.h  nvs_credentials.cc  nvs_credentials.h
firmware/device_id/: BUILD.bazel  device_id.h  efuse_device_id.cc  efuse_device_id.h
firmware/i2c/: BUILD.bazel  arduino_i2c_bus.cc  arduino_i2c_bus.h  fake_i2c_bus.h  i2c_bus.h  i2c_bus_test.cc  tca9548a_bus.cc  tca9548a_bus.h
firmware/mqtt/: BUILD.bazel  firmware_publisher.cc  firmware_publisher.h  leaflab_publisher.cc  leaflab_publisher.h  mock_publisher.h  mqtt_writer.cc  mqtt_writer.h  mqtt_writer_test.cc
firmware/network/: BUILD.bazel  esp32_platform.cc  esp32_platform.h  network_manager.cc  network_manager.h  network_manager_test.cc  network_publisher.h
firmware/proto/: BUILD.bazel  config.options  config.proto  firmware.options  firmware.proto
firmware/sensor/: BUILD.bazel  bh1750.cc  bh1750.h  bh1750_test.cc  ccs811.cc  ccs811.h  mock_sensor.h  sensor.h  sht3x.cc  sht3x.h  thermistor.cc  thermistor.h  thermistor_math.h  thermistor_sensor_test.cc  thermistor_test.cc
firmware/timing/: BUILD.bazel  loop_timer.h  loop_timer_test.cc
friendly_computing_machine/: .env.example  ARCHITECTURE.md  BUILD.bazel  ENV.md  README.md  TOC.md  Tiltfile
friendly_computing_machine/docs/: DEPENDENCY_INJECTION.md  DI_IMPLEMENTATION_SUMMARY.md  DI_MIGRATION_GUIDE.md  DI_QUICK_REFERENCE.md
friendly_computing_machine/src/: BUILD.bazel
friendly_computing_machine/tests/: BUILD.bazel  test_blocks.py  test_db_util.py  test_deps.py  test_manman_subscribe.py  test_scheduled_abstract_task.py  test_temporal_workflow_fix.py  test_util.py
hello_go/: BUILD.bazel  main.go
hello_python/: BUILD.bazel  main.py  test_main.py
hello_world_test/: BUILD.bazel  test_main.py
leaflab/: ARCHITECTURE.md  BUILD.bazel  DATA.md  MQTT.md  README.md  TOC.md  Tiltfile
leaflab/api/: BUILD.bazel  main.go  repository.go  server.go
leaflab/migrate/: BUILD.bazel  ENV.md  main.go
leaflab/processor/: BUILD.bazel  ENV.md  cache.go  config.go  handler.go  handler_test.go  main.go  repository.go
leaflab/scripts/: push-config.sh
leaflab/sensorboard/: BUILD.bazel  CLAUDE.md  README.md  elegoo_config.cc  (+7 more)
manman/: .env.example  ARCHITECTURE.md  BUILD.bazel  CHART_ENHANCEMENTS.md  CHART_LIMITATIONS.md  CHART_MIGRATION.md  CHART_QUICKSTART.md  GETTING_STARTED.md  PARAMETER_SYSTEM.md  README.md  REFACTORING.md  SUMMARY.md  TARGET_DEPENDENCIES.md  TOC.md  Tiltfile  charts-enhanced-example.bzl  k8s-secrets-example.yaml  manman-v2.md  models.go  requirements.txt
manmanv2/: BUILD.bazel  ENV.md  QUICK-START.md  README.md  TOC.md  Tiltfile  models.go  models_test.go
tools/: ARCHITECTURE.md  BUILD.bazel  CLIENT_GENERATION.md  ENHANCED_HELM_FRAMEWORK.md  HELM_NATIVE_MIGRATION.md  README.md  TOC.md  analyze_layer_overhead.py  app_info.bzl  bazel_diff.sh  benchmark_layering.py  cache-optimization-test.sh  collect_coverage.sh  container_image.bzl  container_image_experimental.bzl  create_venv.py  create_venv.sh  create_venv_wrapper.py  discover_packages.py  enhanced_helm_chart_release.bzl  gen_chip_catalog.py  generate_clients.py  generate_package_layers.py  go.bzl  go_binary.bzl  helm.bzl  helm_chart_native.bzl  helm_chart_release.bzl  helm_chart_release_README.md  helm_composition.bzl  helm_composition_simple.bzl  incremental_test.bzl  install_venv.py  install_venv.sh  manual_chart.bzl  multiplatform_image.bzl  oci.bzl  openapi.bzl  openapi_client.bzl  openapi_client_rule.bzl  (+21 more)
(+1813 files in other folders)
