load("@rules_python//python:defs.bzl", "py_library")

# Export files needed by other packages
exports_files([
    "pyproject.toml",
    "uv.lock",
    "MODULE.bazel",
    "MODULE.bazel.lock",
])

# Go setup
# gazelle:prefix github.com/example/everything
# Note: Gazelle rules are not currently needed as there are no external Go dependencies
# If external Go dependencies are added in the future, these can be enabled:
# gazelle(name = "gazelle")
# gazelle(
#     name = "gazelle-update-repos",
#     args = [
#         "-from_file=go.mod",
#         "-to_macro=deps.bzl%go_dependencies",
#         "-prune",
#     ],
#     command = "update-repos",
# )