# Go setup with Gazelle for automated BUILD file generation
load("@gazelle//:def.bzl", "gazelle")
load("@rules_python//python:defs.bzl", "py_library")

# Export files needed by other packages
exports_files([
    "pyproject.toml",
    "uv.lock",
    "MODULE.bazel",
    "MODULE.bazel.lock",
])

# CRITICAL: This prefix must match the module name in go.mod
# gazelle:prefix github.com/whale-net/everything
# gazelle:exclude generated
gazelle(name = "gazelle")

# Update repositories from go.mod (optional, typically not needed with Bzlmod)
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
