module(
    name = "everything",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "rules_pycross", version = "0.8.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "aspect_rules_py", version = "1.6.4-rc1")
bazel_dep(name = "rules_helm", version = "0.6.0.bcr.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "28.3")

# OCI/Docker setup - Ubuntu base image for all containers
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Ubuntu base - default base image for all containers (117MB)
# Uses Bazel's hermetic Python toolchain, so no Python installation needed in base image
oci.pull(
    name = "ubuntu_base",
    digest = "sha256:728785b59223d755e3e5c5af178fab1be7031f3522c5ccd7a0b32b80d8248123",
    image = "ubuntu:24.04",
    platforms = [
        "linux/amd64",
        "linux/arm/v7",
        "linux/arm64/v8",
        "linux/ppc64le",
        "linux/riscv64",
        "linux/s390x",
    ],
)
use_repo(oci, "ubuntu_base", "ubuntu_base_linux_amd64", "ubuntu_base_linux_arm64_v8", "ubuntu_base_linux_arm_v7", "ubuntu_base_linux_ppc64le", "ubuntu_base_linux_riscv64", "ubuntu_base_linux_s390x")

# CA certificates from Debian (architecture-independent .deb file)
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "ca_certificates_deb",
    sha256 = "b2d488ad4d8d8adb3ba319fc9cb2cf9909fc42cb82ad239a26c570a2e749c389",
    urls = ["https://snapshot.debian.org/archive/debian/20231106T210201Z/pool/main/c/ca-certificates/ca-certificates_20210119_all.deb"],
)

# OpenAPI Generator CLI for client code generation
http_file(
    name = "openapi_generator_cli",
    downloaded_file_path = "openapi-generator-cli.jar",
    sha256 = "615e014705af34861e789e0b2a11075d3c80db134f881e937265479a4a83996e",
    urls = ["https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.10.0/openapi-generator-cli-7.10.0.jar"],
)

# SteamCMD for game server management
# SteamCMD is architecture-independent - it's a shell script that downloads
# the appropriate binaries on first run
http_file(
    name = "steamcmd_linux",
    sha256 = "cebf0046bfd08cf45da6bc094ae47aa39ebf4155e5ede41373b579b8f1071e7c",
    urls = ["https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz"],
)

# 32-bit libraries needed for SteamCMD (from Ubuntu 24.04)
# Downloaded at build time - not committed to repository
http_file(
    name = "lib32gcc_s1_deb",
    sha256 = "1ce0330ec5a978480f61864f9038214f8d8f6f5375c00b46f08a1af92fdd764c",
    urls = ["http://archive.ubuntu.com/ubuntu/pool/main/g/gcc-14/lib32gcc-s1_14.2.0-4ubuntu2~24.04_amd64.deb"],
)

http_file(
    name = "libc6_i386_deb",
    sha256 = "a80dfe7331c74bda498aefcd49c20e531977736e287db224d53e9915bdd6d509",
    urls = ["http://archive.ubuntu.com/ubuntu/pool/main/g/glibc/libc6-i386_2.39-0ubuntu8.7_amd64.deb"],
)

# Python setup with rules_python for interpreter registration
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.13",
)
use_repo(python, "python_versions")

# Stripped Python builds from python-build-standalone for production containers
# These are optimized, production-ready builds (~20MB binary vs ~108MB debug)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "python_stripped_x86_64",
    build_file_content = """
exports_files(["python"])
""",
    url = "https://github.com/astral-sh/python-build-standalone/releases/download/20251014/cpython-3.13.9%2B20251014-x86_64-unknown-linux-gnu-install_only_stripped.tar.gz",
)

http_archive(
    name = "python_stripped_arm64",
    build_file_content = """
exports_files(["python"])
""",
    url = "https://github.com/astral-sh/python-build-standalone/releases/download/20251014/cpython-3.13.9%2B20251014-aarch64-unknown-linux-gnu-install_only_stripped.tar.gz",
)

# Pycross setup for cross-platform Python dependency management
# Create environments for different platforms
environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
environments.create_for_python_toolchains(
    name = "everything_pycross_envs",
    platforms = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "aarch64-apple-darwin",
    ],
)
use_repo(environments, "everything_pycross_envs")

# Import dependencies from uv.lock
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")
lock_import.import_uv(
    lock_file = "//:uv.lock",
    project_file = "//:pyproject.toml",
    repo = "pypi",
    target_environments = ["@everything_pycross_envs//:environments"],
)

# Create the package repositories
lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "pypi")

# Go setup

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Go dependencies - Automated via go_deps.from_file
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# CRITICAL: This enables automatic transitive dependency resolution
# from go.mod. Bazel will automatically download all dependencies
# listed in go.mod and their transitive dependencies.
go_deps.from_file(go_mod = "//:go.mod")

# TEMPORARY PATCH: Fix Docker SDK v28.5.2 dependency issue
# Docker SDK imports github.com/containerd/errdefs/pkg/errhttp which doesn't exist
# in containerd/errdefs v1.0.0. This patch adds a stub package.
# TODO: Remove this patch once:
#   1. Docker SDK is updated to work with released containerd/errdefs versions, OR
#   2. containerd/errdefs re-adds the pkg/errhttp package
# See: tools/bazel/patches/PATCH_REMOVAL_PLAN.md for removal instructions
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//tools/bazel/patches:containerd-errdefs-pkg-errhttp.patch",
    ],
    path = "github.com/containerd/errdefs",
)

# OTel SDK internal/x visibility: sdk_metric needs access to sdk/internal/x
# but gazelle doesn't generate the visibility entry. Override with public
# visibility for the SDK module's internal packages.
go_deps.gazelle_override(
    directives = [
        "gazelle:default_visibility //visibility:public",
    ],
    path = "go.opentelemetry.io/otel/sdk",
)
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_containerd_errdefs",
    "com_github_coreos_go_oidc_v3",
    "com_github_distribution_reference",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_docker_go_units",
    "com_github_go_jose_go_jose_v4",
    "com_github_golang_migrate_migrate_v4",
    "com_github_google_uuid",
    "com_github_gorilla_securecookie",
    "com_github_gorilla_sessions",
    "com_github_jackc_pgx_v5",
    "com_github_moby_docker_image_spec",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_pkg_errors",
    "com_github_rabbitmq_amqp091_go",
    "com_github_stretchr_objx",
    "com_github_stretchr_testify",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_log",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_oauth2",
)
