[project]
name = "everything"
version = "0.0.0"
description = "Everything monorepo"
requires-python = ">=3.13"
dependencies = [
    # Testing framework
    "pytest",
    "pytest-asyncio",
    "pytest-git",
    
    # Web framework
    "fastapi",
    "uvicorn[standard]",
    "gunicorn",
    
    # Database and ORM
    "sqlmodel",
    "sqlalchemy",  # Required explicitly for tests
    "asyncpg",
    "psycopg2-binary",  # PostgreSQL adapter for SQLAlchemy
    "alembic",
    
    # Message queue
    "amqpstorm",
    
    # Slack platform
    "slack-bolt",
    "slack-sdk",

    # Temporal workflows
    "temporalio[opentelemetry]",

    # CLI framework
    "typer",
    
    # YAML parsing
    "pyyaml",
    
    # OpenTelemetry for observability
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-exporter-otlp",
    
    # Generative AI
    "google-generativeai",

    # HTTP client
    "httpx",
    "requests",
    
    # JWT handling
    "python-jose",
    "python-dateutil",
    "urllib3",
    
    # Utility libraries
    "pydantic",
    "python-dotenv",

    # MCP server framework
    "fastmcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
